structure html + adding rows working

--- a/AddressBook.html
+++ b/AddressBook.html
@@ -43,8 +43,10 @@
                 </table>
 
                 <input id="add" type="submit" value="Add">
-            </form>
 
+
+            </form>
+            <button id="test-button">test</button>
         </div>
 
         <div id="contacts"> All Addresses
