adding contact working

--- a/AddressBook.html
+++ b/AddressBook.html
@@ -14,42 +14,39 @@
 
     <main>
         <div id="add_contact">Add
-            <form id="addressForm" action="./AddressBook.html" method="POST">
+            <form id="address-form" action="./AddressBook.html" method="POST">
                 <table>
                     <tr>
                         <td>
                             <label for="name">Name</label>
-                            <input type="text" id="name" name="name" value="name" placeholder="Name">
+                            <input type="text" id="name" name="name" placeholder="Name">
                         </td>
                         <td>
                             <label for="surname">Surname</label>
-                            <input type="text" id="surname" name="surname" value="surname" placeholder="Surname">
+                            <input type="text" id="surname" name="surname" placeholder="Surname">
                         </td>
                     </tr>
                     <tr>
                         <td colspan="2">
                             <label for="phone-number">Phone Number</label>
-                            <input type="text" id="phone-number" name="phoneNumber" value="phone number"
-                                placeholder="Phone Number">
+                            <input type="text" id="phone-number" name="phoneNumber" placeholder="Phone Number">
                         </td>
                     </tr>
                     <tr>
                         <td colspan="2">
                             <label for="address">Address</label>
-                            <textarea id="address" name="address" value="address" placeholder="Address"
-                                rows="2"></textarea>
+                            <textarea id="address" name="address" placeholder="Address" rows="2"></textarea>
                         </td>
                     </tr>
                 </table>
 
-                <input id="add" type="submit" value="Add">
+                <button id="add-button"><input id="add-input" type="submit" value="Add"></button>
 
 
             </form>
-            <button id="test-button">test</button>
         </div>
 
-        <div id="contacts"> All Addresses
+        <div id="contacts">
 
             <table>
                 <tbody id="contacts-table">
