initial structure and functionalities

--- a/AddressBook.html
+++ b/AddressBook.html
@@ -8,14 +8,14 @@
 
 <body>
     <header>
-        <h1>Address Book</h1>
-        <div id="search">
+        <h1 class="element">Address Book</h1>
+        <div id="search" class="element">
             <input type="text" id="searchbar" onkeyup="search()" placeholder="Search...">
         </div>
     </header>
 
     <main>
-        <div id="add_contact">
+        <div id="add_contact" class="element">
             <form id="address-form" action="./AddressBook.html" method="POST">
                 <table>
                     <tr>
@@ -51,11 +51,10 @@
         <div id="contacts">
 
             <table>
-                <tbody id="contacts-table">
+                <tbody id="contacts-table" class="element">
 
                 </tbody>
             </table>
-
         </div>
 
     </main>
