--- a/AddressBook.html
+++ b/AddressBook.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="add-contact" class="element">
-            <form id="contact-form" action="./AddressBook.html" method="POST">
+            <form id="contact-form" method="POST" onsubmit="return add(event);">
 
                 <!-- <label for="name">Name</label> -->
                 <input type="text" id="name" name="name" placeholder="Name">
@@ -30,7 +30,7 @@
                 <input type="text" id="surname" name="surname" placeholder="Surname">
 
                 <!-- <label for="phone-number">Phone Number</label> -->
-                <input type="text" id="phone-number" name="phoneNumber" placeholder="Phone Number">
+                <input type="tel" id="phone-number" name="phoneNumber" placeholder="Phone Number">
 
                 <!-- <label for="address">Address</label> -->
                 <textarea id="address" name="address" placeholder="Address" rows="2"></textarea>
