address and phone hiding added

--- a/AddressBook.html
+++ b/AddressBook.html
@@ -17,8 +17,8 @@
     </header>
 
     <main>
-        <div class="element">
-            <button id="show-contact-form">Add Contact</button>
+        <div id="show-form" class="element">
+            <button id="show-contact-form-button">Add Contact</button>
         </div>
 
         <div id="add-contact" class="element">
