better validation for phone number

--- a/AddressBook.html
+++ b/AddressBook.html
@@ -31,7 +31,7 @@
                 <input type="text" id="surname" name="surname" placeholder="Surname">
 
                 <!-- <label for="phone-number">Phone Number</label> -->
-                <input type="tel" id="phone-number" name="phoneNumber" placeholder="Phone Number">
+                <input type="tel" id="phone-number" name="phoneNumber" placeholder="Phone Number: +xx xxx xxx xxx">
 
                 <!-- <label for="address">Address</label> -->
                 <textarea id="address" name="address" placeholder="Address" rows="2"></textarea>
