regex for validation of phone number changed

--- a/AddressBook.html
+++ b/AddressBook.html
@@ -12,7 +12,7 @@
         <h1 id="title" class="element">Address Book</h1>
 
         <div id="search" class="element">
-            <input type="text" id="searchbar" onkeyup="search()" placeholder="Search...">
+            <input type="text" id="searchbar" onkeyup="search()" placeholder="Search Contact...">
         </div>
     </header>
 
