regex for phone number fixed

--- a/AddressBook.html
+++ b/AddressBook.html
@@ -26,16 +26,12 @@
         <div id="add-contact" class="element">
             <form id="contact-form" method="POST" onsubmit="return add(event);">
 
-                <!-- <label for="name">Name</label> -->
                 <input type="text" id="name" name="name" placeholder="Name">
 
-                <!-- <label for="surname">Surname</label> -->
                 <input type="text" id="surname" name="surname" placeholder="Surname">
 
-                <!-- <label for="phone-number">Phone Number</label> -->
-                <input type="tel" id="phone-number" name="phoneNumber" placeholder="Phone Number: +xx xxx xxx xxx">
+                <input type="tel" id="phone-number" name="phoneNumber" placeholder="Phone Number">
 
-                <!-- <label for="address">Address</label> -->
                 <textarea id="address" name="address" placeholder="Address" rows="2"></textarea>
 
                 <button id="add-button"><input id="add-input" type="submit" value="Add"></button>
